tests/bad/comptime_if.glaz
fn main() {
    $if (_UNKNOWN_COMPILER_FLAG_) {}
    $if (FLAG & 4) {} // invalid expression
    $if (&FLAG) {}
    $if (FLAG++) {}
}
